Upgrade to Java 11 and use the new built-in http client